src/main/resources/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: dops
  labels:
    name: dops
spec:
  ports:
    - nodePort: 30163
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: dops
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dops
spec:
  selector:
    matchLabels:
      app: dops
  replicas: 1
  template:
    metadata:
      labels:
        app: dops
    spec:
      containers:
        - name: dops
          image: denis78/dops:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          env:   # env variables
            - name: DB_HOST   # configMap
              valueFrom:
                configMapKeyRef:
                  name: postgres-conf  # configMap
                  key: host
            - name: DB_NAME  # configMap
              valueFrom:
                configMapKeyRef:
                  name: postgres-conf
                  key: name
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-credentials # secret
                  key: postgres_user
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-credentials
                  key: postgres_password
