src/main/resources/ingress-up.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: app.project.com
    http:
      paths:
      - backend:
          serviceName: dops
          servicePort: 8080
